5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1679_1100.log
== TEST (2019-04-23 16:01:44) 
-- CODE:
# Leitura do valor da cedula
c = int(input("digite o valor da cedula: ")

if((c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100)):
	if(c == 2):
		  print("Animal: Tartaruga")
	elif(c == 5):
		  print("Animal: Garça")
	elif(c == 10):
		  print("Animal: Arara")
	elif(c == 20):
		  print("Animal: Mico-leão-dourado")
	elif(c == 50):
		  print("Animal: Onça-pintada")
	elif(c == 100):
		  print("Animal: Garoupa"):
else:
	print("Animal: Invalido")		  
-- ERROR:
File "XXXX", line 4
    if((c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100)):
                                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:02:53) 
-- CODE:
# Leitura do valor da cedula
c = int(input("digite o valor da cedula: ")

if((c == 2) or 
	(c == 5) or 
	(c == 10) or 
	(c == 20) or 
	(c == 50) or 
	(c == 100)
  ):
	if(c == 2):
		  print("Animal: Tartaruga")
	elif(c == 5):
		  print("Animal: Garça")
	elif(c == 10):
		  print("Animal: Arara")
	elif(c == 20):
		  print("Animal: Mico-leão-dourado")
	elif(c == 50):
		  print("Animal: Onça-pintada")
	elif(c == 100):
		  print("Animal: Garoupa")
else:
	print("Animal: Invalido")		  
-- ERROR:
File "XXXX", line 10
    ):
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:03:22) 
-- CODE:
# Leitura do valor da cedula
c = int(input("digite o valor da cedula: ")

if((c == 2) or 
	(c == 5) or 
	(c == 10) or 
	(c == 20) or 
	(c == 50) or 
	(c == 100)
  	):
	if(c == 2):
		  print("Animal: Tartaruga")
	elif(c == 5):
		  print("Animal: Garça")
	elif(c == 10):
		  print("Animal: Arara")
	elif(c == 20):
		  print("Animal: Mico-leão-dourado")
	elif(c == 50):
		  print("Animal: Onça-pintada")
	elif(c == 100):
		  print("Animal: Garoupa")
else:
	print("Animal: Invalido")		  
-- ERROR:
File "XXXX", line 10
    ):
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:03:52) 
-- CODE:
# Leitura do valor da cedula
c = int(input("digite o valor da cedula: ")

if((c == 2) or 
	(c == 5) or 
	(c == 10) or 
	(c == 20) or 
	(c == 50) or 
	(c == 100)
  	):
		if(c == 2):
		  print("Animal: Tartaruga")
		elif(c == 5):
		  print("Animal: Garça")
		elif(c == 10):
		  print("Animal: Arara")
		elif(c == 20):
		  print("Animal: Mico-leão-dourado")
		elif(c == 50):
		  print("Animal: Onça-pintada")
		elif(c == 100):
		  print("Animal: Garoupa")
else:
	print("Animal: Invalido")		  
-- ERROR:
File "XXXX", line 10
    ):
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:04:33) 
-- CODE:
# Leitura do valor da cedula
c = int(input("digite o valor da cedula: ")

if ((c == 2) or 
	(c == 5) or 
	(c == 10) or 
	(c == 20) or 
	(c == 50) or 
	(c == 100)
  	):
		if(c == 2):
		  print("Animal: Tartaruga")
		elif(c == 5):
		  print("Animal: Garça")
		elif(c == 10):
		  print("Animal: Arara")
		elif(c == 20):
		  print("Animal: Mico-leão-dourado")
		elif(c == 50):
		  print("Animal: Onça-pintada")
		elif(c == 100):
		  print("Animal: Garoupa")
else:
	print("Animal: Invalido")		  
-- ERROR:
File "XXXX", line 10
    ):
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:05:20) 
-- CODE:
# Leitura do valor da cedula
c = int(input("digite o valor da cedula: ")

if ((c == 2)):
		if(c == 2):
		  print("Animal: Tartaruga")
		elif(c == 5):
		  print("Animal: Garça")
		elif(c == 10):
		  print("Animal: Arara")
		elif(c == 20):
		  print("Animal: Mico-leão-dourado")
		elif(c == 50):
		  print("Animal: Onça-pintada")
		elif(c == 100):
		  print("Animal: Garoupa")
else:
	print("Animal: Invalido")		  
-- ERROR:
File "XXXX", line 4
    if ((c == 2)):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:05:34) 
-- CODE:
# Leitura do valor da cedula
c = int(input("digite o valor da cedula: ")

if (c == 2):
		if(c == 2):
		  print("Animal: Tartaruga")
		elif(c == 5):
		  print("Animal: Garça")
		elif(c == 10):
		  print("Animal: Arara")
		elif(c == 20):
		  print("Animal: Mico-leão-dourado")
		elif(c == 50):
		  print("Animal: Onça-pintada")
		elif(c == 100):
		  print("Animal: Garoupa")
else:
	print("Animal: Invalido")		  
-- ERROR:
File "XXXX", line 4
    if (c == 2):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:05:58) 
-- CODE:
# Leitura do valor da cedula
c = int(input("digite o valor da cedula: ")

if(c >= 2):
		if(c == 2):
		  print("Animal: Tartaruga")
		elif(c == 5):
		  print("Animal: Garça")
		elif(c == 10):
		  print("Animal: Arara")
		elif(c == 20):
		  print("Animal: Mico-leão-dourado")
		elif(c == 50):
		  print("Animal: Onça-pintada")
		elif(c == 100):
		  print("Animal: Garoupa")
else:
	print("Animal: Invalido")		  
-- ERROR:
File "XXXX", line 4
    if(c >= 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:06:09) 
-- CODE:
# Leitura do valor da cedula
c = int(input("digite o valor da cedula: ")


		if(c == 2):
		  print("Animal: Tartaruga")
		elif(c == 5):
		  print("Animal: Garça")
		elif(c == 10):
		  print("Animal: Arara")
		elif(c == 20):
		  print("Animal: Mico-leão-dourado")
		elif(c == 50):
		  print("Animal: Onça-pintada")
		elif(c == 100):
		  print("Animal: Garoupa")
else:
	print("Animal: Invalido")		  
-- ERROR:
File "XXXX", line 5
    if(c == 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:30:48) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==20):
	print(20)
-- ERROR:
File "XXXX", line 5
    if(c == 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:31:21) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==20) or (c==40):
	print(20)
-- ERROR:
File "XXXX", line 5
    if(c == 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:32:43) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	print(c)
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:33:27) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	print(c)
else:
	print("Animal: invalido")
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:35:20) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2)
		print("Tartaruga")
else:
	print("Animal: invalido")
	
-- ERROR:
File "XXXX", line 5
    if(c==2)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:35:27) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
else:
	print("Animal: invalido")
	
-- ERROR:
File "XXXX", line 5
    if(c==2)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:36:14) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
	elif(c==5):	
		print("Garça")
else:
	print("Animal: invalido")
	
-- ERROR:
File "XXXX", line 5
    if(c==2)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:36:14) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
	elif(c==5):	
		print("Garça")
else:
	print("Animal: invalido")
	
-- ERROR:
File "XXXX", line 5
    if(c==2)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:36:14) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
	elif(c==5):	
		print("Garça")
else:
	print("Animal: invalido")
	
-- ERROR:
File "XXXX", line 5
    if(c==2)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:36:34) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
	elif(c==5):	
		print("Garca")
else:
	print("Animal: invalido")
	
-- ERROR:
File "XXXX", line 5
    if(c==2)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:38:48) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
	elif(c==5):	
		print("Garca")
	elif(c==10):	
		print("Arara")
	elif(c==20):	
		print("Mico-leao-dourado")	
	elif(c==50):	
		print("Onca-pintada")
	elif(c==100):	
		print("Garoupa")	
else:
	print("Animal: invalido")
	
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:38:54) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
	elif(c==5):	
		print("Garca")
	elif(c==10):	
		print("Arara")
	elif(c==20):	
		print("Mico-leao-dourado")	
	elif(c==50):	
		print("Onca-pintada")
	elif(c==100):	
		print("Garoupa")	
else:
	print("Animal: invalido")
	
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:38:59) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
	elif(c==5):	
		print("Garca")
	elif(c==10):	
		print("Arara")
	elif(c==20):	
		print("Mico-leao-dourado")	
	elif(c==50):	
		print("Onca-pintada")
	elif(c==100):	
		print("Garoupa")	
else:
	print("Animal: invalido")
	
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:39:14) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
	elif(c==5):	
		print("Garca")
	elif(c==10):	
		print("Arara")
	elif(c==20):	
		print("Mico-leao-dourado")	
	elif(c==50):	
		print("Onca-pintada")
	elif(c==100):	
		print("Garoupa")	
else:
	print("Animal: invalido")
	
-- EXECUTION TIME:
0.189731
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:39:35) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
	elif(c==5):	
		print("Garca")
	elif(c==10):	
		print("Arara")
	elif(c==20):	
		print("Mico-leao-dourado")	
	elif(c==50):	
		print("Onca-pintada")
	elif(c==100):	
		print("Garoupa")	
else:
	print("Animal: Invalido")
	
-- EXECUTION TIME:
0.205532
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:39:39) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Tartaruga")
	elif(c==5):	
		print("Garca")
	elif(c==10):	
		print("Arara")
	elif(c==20):	
		print("Mico-leao-dourado")	
	elif(c==50):	
		print("Onca-pintada")
	elif(c==100):	
		print("Garoupa")	
else:
	print("Animal: Invalido")
	
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:42:00) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	if(c==2):
		print("Animal: Tartaruga")
	elif(c==5):	
		print("Animal: Garca")
	elif(c==10):	
		print("Animal: Arara")
	elif(c==20):	
		print("Animal: Mico-leao-dourado")	
	elif(c==50):	
		print("Animal: Onca-pintada")
	elif(c==100):	
		print("Animal: Garoupa")	
else:
	print("Animal: Invalido")
	
-- EXECUTION TIME:
0.134773
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:43:09) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	print("Entrada: ", c)
	if(c==2):
		print("Animal: Tartaruga")
	elif(c==5):	
		print("Animal: Garca")
	elif(c==10):	
		print("Animal: Arara")
	elif(c==20):	
		print("Animal: Mico-leao-dourado")	
	elif(c==50):	
		print("Animal: Onca-pintada")
	elif(c==100):	
		print("Animal: Garoupa")	
else:
	print("Animal: Invalido")
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:43:18) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	print("Entrada: ", c)
	if(c==2):
		print("Animal: Tartaruga")
	elif(c==5):	
		print("Animal: Garca")
	elif(c==10):	
		print("Animal: Arara")
	elif(c==20):	
		print("Animal: Mico-leao-dourado")	
	elif(c==50):	
		print("Animal: Onca-pintada")
	elif(c==100):	
		print("Animal: Garoupa")	
else:
	print("Animal: Invalido")
	
-- EXECUTION TIME:
0.137108
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:43:31) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	
	print("Entrada: ", c)
	
	if(c==2):
		print("Animal: Tartaruga")
	elif(c==5):	
		print("Animal: Garca")
	elif(c==10):	
		print("Animal: Arara")
	elif(c==20):	
		print("Animal: Mico-leao-dourado")	
	elif(c==50):	
		print("Animal: Onca-pintada")
	elif(c==100):	
		print("Animal: Garoupa")	
else:
	print("Animal: Invalido")
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:44:20) 
-- CODE:
#Valor da cedula
c = int(input("digite o valor da cedula: "))

if(c==2) or (c==5) or (c==10) or (c==20) or (c==50) or (c==100):
	
	print("Entrada: ", c)
	
	if(c==2):
		print("Animal: Tartaruga")
	elif(c==5):	
		print("Animal: Garca")
	elif(c==10):	
		print("Animal: Arara")
	elif(c==20):	
		print("Animal: Mico-leao-dourado")	
	elif(c==50):	
		print("Animal: Onca-pintada")
	elif(c==100):	
		print("Animal: Garoupa")	
else:
	print("Entrada: ", c)
	print("Animal: Invalido")
	
-- EXECUTION TIME:
0.215902
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
